# alfrusco

./: .gitignore  .rustfmt.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  run-example.sh  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
.ralph/: PROGRESS.md
examples/: ask_claude.rs  async_error.rs  async_success.rs  error.rs  menu.rs  random_user.rs  sleep.rs  static_output.rs  success.rs  url_items.rs  url_items_with_custom_args.rs
examples/menu_workflow/: info.plist
haskell/: LICENSE  alfrusco.cabal
haskell/examples/: StaticOutput.hs  UrlItems.hs
haskell/src/: Alfrusco.hs
haskell/src/Alfrusco/: Arg.hs  BackgroundJob.hs  Clipboard.hs  Config.hs  Error.hs  Icon.hs  InternalHandlers.hs  Item.hs  Logging.hs  Modifier.hs  Response.hs  Runnable.hs  SortAndFilter.hs  Text.hs  Types.hs  URLItem.hs  Workflow.hs
haskell/test/: Spec.hs
haskell/test/Alfrusco/: ClipboardSpec.hs  ConfigSpec.hs  ItemSpec.hs  ModifierSpec.hs  ResponseSpec.hs  SortAndFilterSpec.hs  URLItemSpec.hs  WorkflowSpec.hs
src/: arg.rs  background.rs  background_job.rs  cache.rs  clipboard.rs  config.rs  data.rs  error.rs  icon.rs  internal_handlers.rs  item.rs  lib.rs  logging.rs  modifiers.rs  response.rs  runnable.rs  sort_and_filter.rs  text.rs  url_item.rs  workflow.rs  workflow_config.rs
src/item/: arg.rs  modifiers.rs
src/simulator/: action.rs  graph.rs  harness.rs  mod.rs  screen.rs
tests/: action_routing_tests.rs  background_job_integration_tests.rs  background_job_status_tests.rs  background_job_tests.rs  behavioral_api_tests.rs  clipboard_tests.rs  conditional_routing_tests.rs  config_tests.rs  dynamic_audit_tests.rs  error_injection_tests.rs  error_tests.rs  external_trigger_tests.rs  graph_tests.rs  logging_tests.rs  production_readiness_tests.rs  runnable_tests.rs  simulator_harness_tests.rs  sort_and_filter_integration_tests.rs  terminal_classification_tests.rs
tests/common/: mod.rs
tests/fixtures/: menu_broken.plist
tests/fixtures/menu_conditional_workflow/: info.plist
tests/fixtures/menu_dangling_workflow/: info.plist
tests/fixtures/menu_external_trigger_workflow/: info.plist
tests/fixtures/menu_inline_script_workflow/: .gitignore  info.plist
tests/fixtures/menu_misrouted_workflow/: info.plist
tests/fixtures/menu_unwired_branch_workflow/: info.plist
workflow/: .gitignore  info.plist
