[package]
name = "alfrusco"
version = "0.1.1"
edition = "2021"
description = "Utilities for building Alfred workflows with Rust."
license = "MIT"

[dependencies]
chrono = "0"
clap = { version = "4.5", features = ["derive", "env"] }
clipboard = "0"
fuzzy-matcher = "0"
hex = "0.4"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0"

[dev-dependencies]
tempfile = "3"
