[package]
name = "alfrusco"
version = "0.1.5"
edition = "2021"
description = "Utilities for building Alfred workflows with Rust."
license = "MIT"

[dependencies]
async-trait = "0"
chrono = "0"
clap = { version = "4.5", features = ["derive", "env"] }
clipboard = "0"
env_logger = "0.11"
fuzzy-matcher = "0"
hex = "0.4"
humantime = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
# Clap is used in examples/
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0", features = ["json"] }
temp-env = "0.3"
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
